--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "i18next": "^15.1.0",
+    "i18next-fetch-backend": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.9.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
