--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "remark": "^10.0.1",
+    "remark-react": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
