--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_WEBSITE_NAME="Smart Projects"
-REACT_APP_API_URL="http://localhost:8080/"
+REACT_APP_API_URL="http://localhost:5000"
 REACT_APP_FOOTER="Smart Coop in Europe:  Deutschland   France   Iberica   Italia   Magyarország   Nederland   Österreich   Sverige"
