--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_WEBSITE_NAME="Your Projects Community"
 REACT_APP_API_URL=""
+REACT_APP_IPFS_GATEWAY="http://localhost:8080"
+REACT_APP_IPFS_API="http://localhost:5001"
 REACT_APP_FOOTER="Your Footer"
