--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i18next": "^15.1.0",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-fetch-backend": "^2.2.0",
+    "ipfs-http-client": "^32.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.9.0",
