--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "remark": "^10.0.1",
-    "remark-react": "^5.0.1"
+    "remark-react": "^5.0.1",
+    "web3": "^1.0.0-beta.37"
   },
   "scripts": {
     "predeploy": "npm run build",
